--- a/portfolio.html
+++ b/portfolio.html
@@ -366,22 +366,25 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
         </div>
         <div class="subscribe-side">
           <p class="footer-social-desc subtitle">Subscribe</p>
-           <div class="footer-subscribe-group">
-          <label class="footer-subscribe-label" for="subscribe">
-            <input
-              class="footer-subscribe"
-              type="text"
-              name="subscribe"
-              id="subscribe"
-              placeholder="E-mail" />
-          </label>
-           <button class="footer-btn btn" type="submit">
-              Subscribe
-              <svg class="footer-subscribe-icon" width="24" height="24">
-                <use href="./images/icons.svg#send"></use>
-              </svg>
-              </button
-           </div>
+          <form name="subscribe-form">
+            <div class="footer-subscribe-group">
+              <label class="footer-subscribe-label" for="subscribe">
+                <input
+                  class="footer-subscribe"
+                  type="text"
+                  name="subscribe"
+                  id="subscribe"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="footer-btn btn" type="submit">
+                Subscribe
+                <svg class="footer-subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
