--- a/index.html
+++ b/index.html
@@ -535,113 +535,123 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
         </div>
         <div class="subscribe-side">
           <p class="footer-social-desc subtitle">Subscribe</p>
-           <div class="footer-subscribe-group">
-          <label class="footer-subscribe-label" for="subscribe">
-            <input
-              class="footer-subscribe"
-              type="text"
-              name="subscribe"
-              id="subscribe"
-              placeholder="E-mail" />
-          </label>
-           <button class="footer-btn btn" type="submit">
-              Subscribe
-              <svg class="footer-subscribe-icon" width="24" height="24">
-                <use href="./images/icons.svg#send"></use>
-              </svg>
-              </button
-           </div>
+          <form name="subscribe-form">
+            <div class="footer-subscribe-group">
+              <label class="footer-subscribe-label" for="subscribe">
+                <input
+                  class="footer-subscribe"
+                  type="text"
+                  name="subscribe"
+                  id="subscribe"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="footer-btn btn" type="submit">
+                Subscribe
+                <svg class="footer-subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
     <!-- modal window -->
 
-    <div class="modal-overlay is-hidden" data-modal>
+    <div class="modal-overlay" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-close" data-modal-close width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <div class="modal-group-element">
-          <strong class="modal-desc desc">
-            Leave your contacts and we will call you back
-          </strong>
-        </div>
-        <div class="modal-group-element">
-          <label class="modal-form-label modal-label-name" for="name">
-            Name
-            <input class="modal-form-field" type="text" name="name" id="name" />
-            <svg class="modal-group-icon" width="18" height="18">
-              <use href="./images/icons.svg#user"></use>
-            </svg>
-          </label>
-        </div>
-        <div class="modal-group-element">
-          <label class="modal-form-label" for="phone">
-            Phone
-            <input
-              class="modal-form-field"
-              type="tel"
-              name="phone"
-              id="phone"
-            /><svg class="modal-group-icon" width="18" height="18">
-              <use href="./images/icons.svg#phone"></use>
-            </svg>
-          </label>
-        </div>
-        <div class="modal-group-element">
-          <label class="modal-form-label" for="mail"
-            >Email
-            <input
-              class="modal-form-field"
-              type="email"
-              name="mail"
-              id="mail"
-            /><svg class="modal-group-icon" width="18" height="18">
-              <use href="./images/icons.svg#mail"></use>
-            </svg>
-          </label>
-        </div>
-        <div class="modal-group-element">
-          <label class="modal-form-label" for="comment">
-            Comment
-            <textarea
-              class="modal-form-textarea"
-              name="comment"
-              id="comment"
-              placeholder="Text input"
-              rows="5"
-            ></textarea>
-          </label>
-        </div>
-        <div class="modal-group-element">
-          <label class="modal-form-policy modal-group-policy" for="policy">
-            <input
-              class="modal-form-check"
-              type="checkbox"
-              name="policy"
-              id="policy"
-            />
-            <svg class="modal-icon-checked" width="16" height="16">
-              <use
-                class="modal-icon-frame"
-                href="./images/icons.svg#checkbox"
-              ></use>
-              <use
-                class="modal-icon-check"
-                href="./images/icons.svg#checked"
-              ></use>
-            </svg>
-            <span class="modal-policy-desc"
-              >I accept the terms and conditions of the
-              <a class="modal-form-link" href="#"> Privacy Policy</a></span
-            ></label
-          >
-        </div>
-        <div class="modal-group-submit">
-          <button class="modal-btn-submit btn" type="submit">Send</button>
-        </div>
+        <form name="modal-form">
+          <div class="modal-group-element modal-group-desc">
+            <strong class="modal-desc desc">
+              Leave your contacts and we will call you back
+            </strong>
+          </div>
+          <div class="modal-group-element">
+            <label class="modal-form-label modal-label-name" for="name">
+              <span class="modal-label-desc">Name</span>
+              <input
+                class="modal-form-field"
+                type="text"
+                name="name"
+                id="name"
+              />
+              <svg class="modal-group-icon" width="18" height="18">
+                <use href="./images/icons.svg#user"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="modal-group-element">
+            <label class="modal-form-label" for="phone">
+              <span class="modal-label-desc">Phone</span>
+              <input
+                class="modal-form-field"
+                type="tel"
+                name="phone"
+                id="phone"
+              /><svg class="modal-group-icon" width="18" height="18">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="modal-group-element">
+            <label class="modal-form-label" for="mail"
+              ><span class="modal-label-desc">Email</span>
+              <input
+                class="modal-form-field"
+                type="email"
+                name="mail"
+                id="mail"
+              /><svg class="modal-group-icon" width="18" height="18">
+                <use href="./images/icons.svg#mail"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="modal-group-element">
+            <label class="modal-form-label modal-textarea-label" for="comment">
+              <span class="modal-label-desc">Comment</span>
+              <textarea
+                class="modal-form-textarea"
+                name="comment"
+                id="comment"
+                placeholder="Text input"
+                rows="5"
+              ></textarea>
+            </label>
+          </div>
+          <div class="modal-group-element modal-group-check">
+            <label class="modal-form-policy modal-group-policy" for="policy">
+              <input
+                class="modal-form-check"
+                type="checkbox"
+                name="policy"
+                id="policy"
+              />
+              <svg class="modal-icon-checked" width="16" height="16">
+                <use
+                  class="modal-icon-frame"
+                  href="./images/icons.svg#checkbox"
+                ></use>
+                <use
+                  class="modal-icon-check"
+                  href="./images/icons.svg#checked"
+                ></use>
+              </svg>
+              <span class="modal-policy-desc"
+                >I accept the terms and conditions of the
+                <a class="modal-form-link" href="#"> Privacy Policy</a></span
+              ></label
+            >
+          </div>
+          <div class="modal-group-submit">
+            <button class="modal-btn-submit btn" type="submit">Send</button>
+          </div>
+        </form>
       </div>
     </div>
     <!-- modal script -->
