--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
     </footer>
     <!-- modal window -->
 
-    <div class="modal-overlay" data-modal>
+    <div class="modal-overlay is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-close" data-modal-close width="8" height="8">
@@ -567,11 +567,9 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
           </svg>
         </button>
         <form name="modal-form">
-          <div class="modal-group-element modal-group-desc">
-            <strong class="modal-desc desc">
-              Leave your contacts and we will call you back
-            </strong>
-          </div>
+          <strong class="modal-desc desc">
+            Leave your contacts and we will call you back
+          </strong>
           <div class="modal-group-element">
             <label class="modal-form-label modal-label-name" for="name">
               <span class="modal-label-desc">Name</span>
